[package]
name = "curseofrust"
version = "0.1.0"
edition = "2021"
authors = [
    "Jiening Yu <jiening.yu@outlook.com>",
    "C191239 <zhushunzhong2025@i.pkuschool.edu.cn>",
]
description = "Tiny RTS game where you struggle with bots or friends"
repository = "https://codeberg.org/DM-Earth/curseofrust"
license = "AGPL-3.0-or-later"
keywords = []
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.3.0"

[workspace]
resolver = "2"
members = ["gui-cocoa", "console", "cli", "msg", "server", "net-foundation"]

[profile.release]
panic = "abort"
lto = "fat"
