[package]
name = "curseofrust-cli-parser"
version = "0.1.0"
edition = "2021"
authors = ["Jiening Yu <jiening.yu@outlook.com>"]
description = "Simple CLI arguments parser for curseofrust"
repository = "https://codeberg.org/DM-Earth/curseofrust"
license = "AGPL-3.0-or-later"
keywords = []
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curseofrust = { path = ".." }
clap_lex = "0.7"

[features]
net-proto = []
