[package]
name = "curseofrust-cli-parser"
authors = ["Jiening Yu <jiening.yu@outlook.com>"]
description = "Simple CLI arguments parser for curseofrust"
keywords = []
categories = ["game-development"]
version = "0.1.3"
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curseofrust = { path = "../", version = "0.1" }
clap_lex = "1.1.0"

[features]
net-proto = []
