[package]
name = "curseofrust-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curseofrust = { path = ".." }
curseofrust-cli-parser = { path = "../cli", features = ["net-proto"] }
curseofrust-msg = { path = "../msg", optional = true }
curseofrust-net-foundation = { path = "../net-foundation", optional = true }
fastrand = "2.3"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-lite = "2.6"
async-io = "2.4"
async-executor = { version = "1.3", optional = true }
local-ip-address = { version = "0.6", optional = true }

[features]
default = ["multiplayer"]
multiplayer = [
  "dep:curseofrust-msg",
  "dep:local-ip-address",
  "dep:async-executor",
  "dep:curseofrust-net-foundation",
]
ws = ["multiplayer", "curseofrust-net-foundation/ws"]
