[package]
name = "curseofrust-console"
authors = ["Jiening Yu <jiening.yu@outlook.com>"]
description = "TUI/CLI implementation of curseofrust client"
keywords = []
categories = ["games"]
version = "0.1.4"
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curseofrust = { path = "../", version = "0.1" }
curseofrust-cli-parser = { path = "../cli", version = "0.1" }
curseofrust-msg = { path = "../msg", version = "0.1", optional = true }
curseofrust-net-foundation = { path = "../net-foundation", version = "0.1", optional = true }
fastrand = "2.3"
crossterm = { version = "0.29.0", default-features = false, features = [
  "event-stream",
  "windows",
] }
futures-lite = "2.6"
async-io = "2.4"
async-executor = { version = "1.3", optional = true }
local-ip-address = { version = "0.6", optional = true }

[features]
default = ["multiplayer"]
multiplayer = [
  "dep:curseofrust-msg",
  "dep:local-ip-address",
  "dep:async-executor",
  "dep:curseofrust-net-foundation",
  "curseofrust-cli-parser/net-proto",
]
ws = ["multiplayer", "curseofrust-net-foundation/ws"]
