[package]
name = "curseofrust-gui-cocoa"
version = "0.1.0"
edition = "2021"
authors = ["C191239 <zhushunzhong2025@i.pkuschool.edu.cn>"]
description = "A real-time strategy game named \"Curse of War\" ported to rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curseofrust = { path = ".." }
build-time = "0.1.3"
fastrand = "2.0"
cli-parser = { path = "../cli", package = "curseofrust-cli-parser" }
local-ip-address = "0.6"
msg = { path = "../msg", package = "curseofrust-msg" }
itoa = "1.0.11"
# Doubling objc2 because cacao uses a weird beta version of it.
objc2 = { version = "0.5.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cacao = { git = "https://github.com/ryanmcgrath/cacao/", rev = "e3bbb9366c8cf5a5474c5b134ae60e9641da3b7b" }
dispatch = "0.2.0"
objc2-metal = { version = "0.2.2", optional = true }
objc2-metal-kit = { version = "0.2.0", optional = true }

[package.metadata.bundle]
name = "Curse of Rust"
identifier = "com.dm.earth.curseofrust"
version = "0.1.0"
copyright = "Copyright (c) 2024 C191239. Licensed under GNU Affero Public License Version 3."
category = "public.app-category.strategy-games"
icon = ["./images/icon.gif"]

[features]
default = ["high-sierra"]
high-sierra = []
metal = ["dep:objc2", "dep:objc2-metal", "dep:objc2-metal-kit"]
