[package]
name = "curseofrust-gui-cocoa"
version = "0.1.0"
edition = "2021"
authors = ["C191239 <zhushunzhong2025@i.pkuschool.edu.cn>"]
description = "A real-time strategy game named \"Curse of War\" ported to rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curseofrust = { path = ".." }
build-time = "0.1"
fastrand = "2.3"
cli-parser = { path = "../cli", package = "curseofrust-cli-parser" }
local-ip-address = "0.6"
msg = { path = "../msg", package = "curseofrust-msg" }
itoa = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
cacao = { git = "https://github.com/ryanmcgrath/cacao/", rev = "e3bbb9366c8cf5a5474c5b134ae60e9641da3b7b" }
dispatch = "0.2.0"
objc2-metal = { version = "0.2.2", optional = true }
objc2-metal-kit = { version = "0.2.2", optional = true }
objc2-foundation = { version = "0.2.2", optional = true }
objc2-quartz-core = { version = "0.2.2", optional = true }
# Doubling objc2 because cacao uses a weird beta version of it.
objc2 = { version = "0.5.2", optional = true }

[package.metadata.bundle]
name = "Curse of Rust"
identifier = "com.dm.earth.curseofrust"
version = "0.1.0"
copyright = "Copyright (c) 2024 C191239. Licensed under GNU Affero Public License Version 3."
category = "public.app-category.strategy-games"
icon = ["./images/icon.gif"]

[features]
default = ["high-sierra"]
high-sierra = []

# This feature enables GPU rendering using Metal.
# It's confirmed that this feature will bring instability to your system.
# YOU HAVE BEEN WARNED.
# C191239 Jan. 27th, 25'
metal = [
    "dep:objc2",
    "dep:objc2-foundation",
    "dep:objc2-metal",
    "dep:objc2-metal-kit",
    "dep:objc2-quartz-core",
    "objc2-foundation/NSDictionary",
    "objc2-foundation/NSThread",
    "objc2-foundation/dispatch",
    "objc2-metal-kit/MTKTextureLoader",
    "objc2-metal-kit/MTKView",
    "objc2-metal-kit/objc2-app-kit",
    "objc2-metal-kit/objc2-quartz-core",
    "objc2-metal/MTLBlitCommandEncoder",
    "objc2-metal/MTLCommandBuffer",
    "objc2-metal/MTLCommandEncoder",
    "objc2-metal/MTLCommandQueue",
    "objc2-metal/MTLDrawable",
    "objc2-metal/MTLPixelFormat",
    "objc2-metal/MTLResource",
    "objc2-metal/MTLTexture",
    "objc2-metal/MTLTypes",
    "objc2-quartz-core/CAMetalLayer",
    "objc2-quartz-core/objc2-metal",
]
