[package]
name = "curseofrust-msg"
authors = ["Jiening Yu <jiening.yu@outlook.com>"]
description = "Curseofwar messaging protocol implementation"
keywords = []
categories = ["game-development"]
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
curseofrust = { path = "../" }
bytemuck = "1.21"
