[package]
name = "curseofrust-msg"
authors = ["Jiening Yu <jiening.yu@outlook.com>"]
description = "Curseofwar messaging protocol implementation"
keywords = []
categories = ["game-development"]
version = "0.1.4"
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
curseofrust = { path = "../", version = "0.1" }
bytemuck = "1.21"
