[package]
name = "curseofrust-net-foundation"
version = "0.1.0"
edition = "2021"
authors = ["Jiening Yu <jiening.yu@outlook.com>"]
description = "Bare networking layer on the top of unisock - for curseofrust"
repository = "https://codeberg.org/DM-Earth/curseofrust"
license = "AGPL-3.0-or-later"
keywords = []
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unisock = "1.0"
unisock-smol = "0.1"
unisock-smol-tungstenite = { version = "0.0.1", optional = true }

[features]
ws = ["dep:unisock-smol-tungstenite"]
