[package]
name = "curseofrust-net-foundation"
authors = ["Jiening Yu <jiening.yu@outlook.com>"]
description = "Bare networking layer on the top of unisock - for curseofrust"
keywords = []
categories = ["game-development"]
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unisock = "1.0"
unisock-smol = "0.1"
unisock-smol-tungstenite = { version = "0.1", optional = true }

[features]
ws = ["dep:unisock-smol-tungstenite"]
