[package]
name = "curseofrust-server"
authors = ["Jiening Yu <jiening.yu@outlook.com>"]
description = "Server binary of curseofrust"
keywords = []
categories = ["games"]
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curseofrust = { path = "../" }
curseofrust-cli-parser = { path = "../cli", features = ["net-proto"] }
curseofrust-msg = { path = "../msg" }
curseofrust-net-foundation = { path = "../net-foundation" }
futures-lite = "2.6"
async-io = "2.4"
async-executor = "1.13"
fastrand = "2.3"
local-ip-address = "0.6"

[features]
ws = ["curseofrust-net-foundation/ws"]
