[package]
name = "curseofrust-server"
authors = ["Jiening Yu <jiening.yu@outlook.com>"]
description = "Server binary of curseofrust"
keywords = []
categories = ["games"]
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curseofrust = { path = "../", version = "0.1" }
curseofrust-cli-parser = { path = "../cli", features = [
  "net-proto",
], version = "0.1" }
curseofrust-msg = { path = "../msg", version = "0.1" }
curseofrust-net-foundation = { path = "../net-foundation", version = "0.1" }
futures-lite = "2.6"
futures-util = "0.3"
async-io = "2.4"
async-executor = "1.13"
async-notify = "0.3"
fastrand = "2.3"
local-ip-address = "0.6"

[features]
ws = ["curseofrust-net-foundation/ws"]
prefer-ipv6 = []
