[package]
name = "curseofrust-server"
authors = ["Jiening Yu <jiening.yu@outlook.com>"]
description = "Server binary of curseofrust"
keywords = []
categories = ["games"]
version = "0.1.4"
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curseofrust = { path = "../", version = "0.1" }
curseofrust-cli-parser = { path = "../cli", features = [
  "net-proto",
], version = "0.1" }
curseofrust-msg = { path = "../msg", version = "0.1" }
curseofrust-net-foundation = { path = "../net-foundation", version = "0.1" }
futures-lite = "2.6"
futures-util = "0.3"
async-io = "2.4"
async-executor = "1.13"
event-listener = "5.4"
fastrand = "2.3"
local-ip-address = "0.6"

[features]
ws = ["curseofrust-net-foundation/ws"]
prefer-ipv6 = []
